# line_profiler

./: .codecov.yml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  _line_profiler_hooks.py  build_wheels.sh  clean.sh  comp.py  kernprof.py  publish.sh  pyproject.toml  requirements.txt  run_linter.sh  run_manylinux_build.sh  run_tests.py  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: python-package.yml  python-publish.yml  python-sdist-test.yml  python-test.yml  release.yml  tests.yml
dev/: autoprofile-poc.py  ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  secrets_configuration.sh  setup_secrets.sh
dev/maintain/: debug_free_bsd.sh  port_utilities.py
dev/poc/: dispatch_regression_tests.py  gather_regression_tests.py  regression_test.py
docs/for_developers/: release_process.rst
docs/source/: conf.py  index.rst  line_profiler.autoprofile.profmod_extractor.rst  line_profiler.autoprofile.rst  line_profiler.line_profiler.rst  line_profiler.rst
docs/source/auto/: kernprof.rst  line_profiler.__main__.rst  line_profiler._line_profiler.rst  line_profiler.autoprofile.ast_profile_transformer.rst  line_profiler.autoprofile.ast_profle_transformer.rst  line_profiler.autoprofile.ast_tree_profiler.rst  line_profiler.autoprofile.autoprofile.rst  line_profiler.autoprofile.eager_preimports.rst  line_profiler.autoprofile.line_profiler_utils.rst  line_profiler.autoprofile.profmod_extractor.rst  line_profiler.autoprofile.rst  line_profiler.autoprofile.run_module.rst  line_profiler.autoprofile.util_static.rst  line_profiler.cli_utils.rst  line_profiler.explicit_profiler.rst  line_profiler.ipython_extension.rst  line_profiler.line_profiler.rst  line_profiler.profiler_mixin.rst  line_profiler.rst  line_profiler.scoping_policy.rst  line_profiler.timers.rst  line_profiler.toml_config.rst  line_profiler.unset_trace.rst  modules.rst
docs/source/manual/examples/: example_kernprof.rst  example_toml_config.rst  example_units.rst  index.rst
line_profiler/: CMakeLists.txt  Python_wrapper.h  __init__.py  __main__.py  _diagnostics.py  _line_profiler.html  _line_profiler.pyi  _line_profiler.pyx  _logger.py  _map_helpers.pxd  _threading_patches.py  c_trace_callbacks.c  c_trace_callbacks.h  cleanup.py  cli_utils.py  cli_utils.pyi  curated_profiling.py  explicit_profiler.py  explicit_profiler.pyi  imphook.py  ipython_extension.py  ipython_extension.pyi  line_profiler.py  line_profiler.pyi  line_profiler_rc.toml  line_profiler_utils.py  line_profiler_utils.pyi  phashmap.pxd  profiler_mixin.py  profiler_mixin.pyi  python25.pxd  scoping_policy.py  scoping_policy.pyi  timers.c  timers.cpp  toml_config.py  toml_config.pyi
line_profiler/_child_process_profiling/: __init__.py  _cache_logging.py  cache.py  import_machinery.py  meta_path_finder.py  misc_utils.py  multiprocessing_patches.py  pth_hook.py  runpy_patches.py  threading_patches.py
line_profiler/_child_process_profiling/multiprocessing_patches/: __init__.py  _infrastructure.py  _mandatory_patches.py  _optional_patches.py  _profiling_patches.py  _queue.py  mp_config.py  poller.py
line_profiler/autoprofile/: ast_profile_transformer.py  ast_profile_transformer.pyi  ast_profiler.py  ast_profle_transformer.py  ast_tree_profiler.py  ast_tree_profiler.pyi  autoprofile.py  autoprofile.pyi  eager_preimports.py  eager_preimports.pyi  line_profiler_utils.py  line_profiler_utils.pyi  poc.py  profmod_extractor.py  run_module.py  run_module.pyi  util_import.py  util_static.py
line_profiler/rc/: line_profiler.toml
requirements/: build.txt  docs.txt  ipython.txt  optional.txt  runtime.txt  tests.txt
tests/: complex_example.py  conftest.py  test_assumptions.py  test_async.py  test_auto_profiler.py  test_autoprofile.py  test_child_procs.py  test_cli.py  test_complex_case.py  test_cython.py  test_duplicate_functions.py  test_eager_preimports.py  test_explicit_profile.py  test_import.py  test_ipython.py  test_kernprof.py  test_line_profiler.py  test_retry_tests.py  test_sys_monitoring.py  test_sys_trace.py  test_toml_config.py
tests/cython_example/: cython_example.pyx  pyproject.toml  setup.py
tests/test_child_procs/: _test_child_procs_utils.py  conftest.py  test_child_procs.py  tests.py
tests/test_child_procs/multiproc_examples/: external_module.py  pool_test_module.py  process_test_module.py
