[build-system]
requires = [
    "setuptools>=68.2.2; python_version < '4.0'  and python_version >= '3.8'",
    "setuptools>=41.0.1; python_version < '3.8'  and python_version >= '3.6'",

    "Cython>=3.0.3",
    #"Cython>=3.0.3               ; python_version < '4.0'  and python_version >= '3.8' ",
    #"Cython>=0.29.24,<=3.0.0a11  ; python_version < '3.8'  and python_version >= '3.6' ",
]
build-backend = "setuptools.build_meta"  # comment out to disable pep517

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if trace is not None",
    "verbose = .*",
    "^ *raise",
    "^ *pass *$",
    "if _debug:",
    "if __name__ == .__main__.:",
    ".*if six.PY2:"
]

omit =[
    "*/setup.py"
]

[tool.cibuildwheel]
build = "cp36-* cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
build-frontend = "build"
build-verbosity = 1
test-requires = [ "-r requirements/tests.txt",]
test-command = "python {project}/run_tests.py"

# https://cibuildwheel.readthedocs.io/en/stable/options/#archs
[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]


[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "pyutils", "binpy", "github",]
mod_name = "line_profiler"
repo_name = "line_profiler"
rel_mod_parent_dpath = "."
os = [ "all", "linux", "osx", "win",]
min_python = 3.6
author = "Robert Kern"
author_email = "robert.kern@enthought.com"
description = "Line-by-line profiler"
url = "https://github.com/pyutils/line_profiler"
license = "BSD"
dev_status = "stable"
typed = true

[tool.xcookie.entry_points]
# the console_scripts entry point creates the xdoctest executable
console_scripts = [
    "kernprof=kernprof:main",
]


[tool.pytest.ini_options]
addopts = "--ignore-glob=setup.py --ignore-glob=dev"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [
    "default",
]
