[build-system]
requires = [
    "setuptools>=68.2.2; python_version < '4.0'  and python_version >= '3.8'",
    "Cython>=3.0.3",
]
build-backend = "setuptools.build_meta"  # comment out to disable pep517

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if trace is not None",
    "verbose = .*",
    "^ *raise",
    "^ *pass *$",
    "if _debug:",
    "if __name__ == .__main__.:",
    ".*if typing.TYPE_CHECKING:",
    ".*if TYPE_CHECKING:",
    "@typing.overload",
    "@overload",
]

omit =[
    "*/setup.py"
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
# XXX: since `tests.yml` already defines `matrix.cibw_skip` for
# `build_binpy_wheels`, can we deduplicate and just use that?
# Or do we need these when building wheels for release, which may run on
# separate pipelines?
skip = ["*-win32", "cp310-win_arm64", "cp313-musllinux_i686"]
build-frontend = "build"
build-verbosity = 1
test-command = "python {project}/run_tests.py"
test-extras = ["tests-strict", "runtime-strict"]

# https://cibuildwheel.readthedocs.io/en/stable/options/#archs
[tool.cibuildwheel.linux]
# We'll build X86 and ARM wheels natively on separate runners
archs = ['auto']
[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]
[tool.cibuildwheel.windows]
archs = ['AMD64', 'ARM64']


[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "pyutils", "binpy", "github", "mypy", "binpy-ubuntu-arm"]
mod_name = "line_profiler"
repo_name = "line_profiler"
rel_mod_parent_dpath = "."
os = [ "all", "linux", "osx", "win",]
main_python = '3.13'
min_python = '3.10'
max_python = '3.14'
author = "Robert Kern"
author_email = "robert.kern@enthought.com"
description = "Line-by-line profiler"
url = "https://github.com/pyutils/line_profiler"
license = "BSD"
dev_status = "stable"
ci_pypi_trusted_publishing = true
ci_gpg_secret_transport = "direct_ci"
typed = true
skip_autogen = ["MANIFEST.in", "CHANGELOG.md"]
test_env = """
COVERAGE_CORE: ctrace
"""

[tool.xcookie.entry_points]
# the console_scripts entry point creates the xdoctest executable
console_scripts = [
    "kernprof=kernprof:main",
]


[tool.pytest.ini_options]
addopts = "--ignore-glob=setup.py --ignore-glob=dev --ignore-glob=setup.py --ignore-glob=docs --ignore-glob=agentx"
norecursedirs = ".git ignore build __pycache__ dev _skbuild docs agentx"
filterwarnings = [
    "default",
]

[[tool.ty.overrides]]
# Apply the ignore unresolved rules to these files
include = [
  "line_profiler/line_profiler_utils.py",
]
rules = { unused-type-ignore-comment = "ignore" }

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
# Enable Flake8 (E, F) and isort (I) rules.
select = ["E", "F", "I"]
# Ignore specific rules, for example, E501 (line too long) as it's handled by the formatter.
ignore = [
    "E501",  # line too long
    "E402",  # Module level import not at top of file
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ty.rules]
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
unresolved-import = "ignore"
